--- a/interface/autoware_interface_test/CMakeLists.txt
+++ b/interface/autoware_interface_test/CMakeLists.txt
@@ -7,4 +7,5 @@ ament_auto_add_executable(test_pub_raw src/test_pub_raw.cpp)
 ament_auto_add_executable(test_sub_raw src/test_sub_raw.cpp)
 ament_auto_add_executable(test_pub_dev src/test_pub_dev.cpp)
 ament_auto_add_executable(test_sub_dev src/test_sub_dev.cpp)
+ament_auto_add_executable(test_cli_dev src/test_cli_dev.cpp)
 ament_auto_package()
