--- a/interface/component_interface_manager_test/package.xml
+++ b/interface/component_interface_manager_test/package.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>autoware_interface_test</name>
+  <name>component_interface_manager_test</name>
   <version>0.0.0</version>
-  <description>The autoware_interface_test package</description>
+  <description>The component_interface_manager_test package</description>
   <maintainer email="isamu.takagi@tier4.jp">Takagi, Isamu</maintainer>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
   <buildtool_depend>autoware_cmake</buildtool_depend>
 
+  <depend>component_interface_manager_cpp</depend>
+  <depend>component_interface_manager_py</depend>
   <depend>rclcpp</depend>
-  <depend>vehicle_control_interface</depend>
+  <depend>rclpy</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>autoware_lint_common</test_depend>
