--- a/interface/component_interface_manager_test/CMakeLists.txt
+++ b/interface/component_interface_manager_test/CMakeLists.txt
@@ -3,5 +3,10 @@ project(component_interface_manager_test)
 
 find_package(autoware_cmake REQUIRED)
 autoware_package()
-# ament_auto_add_executable(test_pub_raw src/test_pub_raw.cpp)
+ament_auto_add_executable(cpp_pub_ros test/cpp/msg/cpp_pub_ros.cpp)
+ament_auto_add_executable(cpp_sub_ros test/cpp/msg/cpp_sub_ros.cpp)
+ament_auto_add_executable(cpp_pub_v1  test/cpp/msg/cpp_pub_v1.cpp)
+ament_auto_add_executable(cpp_sub_v1  test/cpp/msg/cpp_sub_v1.cpp)
+ament_auto_add_executable(cpp_pub_v2  test/cpp/msg/cpp_pub_v2.cpp)
+ament_auto_add_executable(cpp_sub_v2  test/cpp/msg/cpp_sub_v2.cpp)
 ament_auto_package()
