--- a/system/diagnostic_graph_aggregator/CMakeLists.txt
+++ b/system/diagnostic_graph_aggregator/CMakeLists.txt
@@ -9,41 +9,42 @@ ament_auto_add_library(${PROJECT_NAME} SHARED
   src/common/graph/debug.cpp
   src/common/graph/graph.cpp
   src/common/graph/units.cpp
+  src/common/graph/factory.cpp
 )
 
-ament_auto_add_executable(aggregator
-  src/node/aggregator.cpp
-  src/node/plugin/modes.cpp
-)
-target_include_directories(aggregator PRIVATE src/common)
+#ament_auto_add_executable(aggregator
+#  src/node/aggregator.cpp
+#  src/node/plugin/modes.cpp
+#)
+#target_include_directories(aggregator PRIVATE src/common)
 
-ament_auto_add_executable(converter
-  src/node/converter.cpp
-)
-target_include_directories(converter PRIVATE src/common)
+#ament_auto_add_executable(converter
+#  src/node/converter.cpp
+#)
+#target_include_directories(converter PRIVATE src/common)
 
-ament_auto_add_executable(tree
-  src/tool/tree.cpp
-  src/tool/utils/loader.cpp
-)
-target_include_directories(tree PRIVATE src/common)
+#ament_auto_add_executable(tree
+#  src/tool/tree.cpp
+#  src/tool/utils/loader.cpp
+#)
+#target_include_directories(tree PRIVATE src/common)
 
-ament_auto_add_executable(plantuml
-  src/tool/plantuml.cpp
-  src/tool/utils/loader.cpp
-)
-target_include_directories(plantuml PRIVATE src/common)
+#ament_auto_add_executable(plantuml
+#  src/tool/plantuml.cpp
+#  src/tool/utils/loader.cpp
+#)
+#target_include_directories(plantuml PRIVATE src/common)
 
-if(BUILD_TESTING)
-  get_filename_component(RESOURCE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/test/files ABSOLUTE)
-  ament_auto_add_gtest(gtest_${PROJECT_NAME}
-    test/src/test1.cpp
-    test/src/test2.cpp
-    test/src/utils.cpp
-  )
-  target_compile_definitions(gtest_${PROJECT_NAME} PRIVATE TEST_RESOURCE_PATH="${RESOURCE_PATH}")
-  target_include_directories(gtest_${PROJECT_NAME} PRIVATE src/common)
-endif()
+#if(BUILD_TESTING)
+#  get_filename_component(RESOURCE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/test/files ABSOLUTE)
+#  ament_auto_add_gtest(gtest_${PROJECT_NAME}
+#    test/src/test1.cpp
+#    test/src/test2.cpp
+#    test/src/utils.cpp
+#  )
+#  target_compile_definitions(gtest_${PROJECT_NAME} PRIVATE TEST_RESOURCE_PATH="${RESOURCE_PATH}")
+#  target_include_directories(gtest_${PROJECT_NAME} PRIVATE src/common)
+#endif()
 
 install(PROGRAMS
   script/dump.py
