WIP: move files
Signed-off-by: Takagi, Isamu <isamu.takagi@tier4.jp>

--- a/system/diagnostic_graph_aggregator/CMakeLists.txt
+++ b/system/diagnostic_graph_aggregator/CMakeLists.txt
@@ -4,25 +4,21 @@ project(diagnostic_graph_aggregator)
 find_package(autoware_cmake REQUIRED)
 autoware_package()
 
-#ament_auto_add_library(${PROJECT_NAME} SHARED
-#  src/common/graph/config.cpp
-#  src/common/graph/graph.cpp
-#  src/common/graph/units.cpp
-#  src/common/graph/factory.cpp
-#)
+ament_auto_add_library(${PROJECT_NAME} SHARED
+  src/common/graph/config.cpp
+  src/common/graph/error.cpp
+  src/common/graph/graph.cpp
+  src/common/graph/units.cpp
+  src/common/graph/factory.cpp
+  src/common/graph/config.cpp
+  src/common/graph/data.cpp
+)
 
 #ament_auto_add_executable(aggregator
 #  src/node/aggregator.cpp
 #  src/node/plugin/modes.cpp
 #)
 #target_include_directories(aggregator PRIVATE src/common)
-
-ament_auto_add_executable(config
-  src/common/config/test.cpp
-  src/common/config/data.cpp
-  src/common/config/error.cpp
-  src/common/config/config.cpp
-)
 
 #ament_auto_add_executable(converter
 #  src/node/converter.cpp
