--- a/system/diagnostic_graph_utils/CMakeLists.txt
+++ b/system/diagnostic_graph_utils/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(autoware_cmake REQUIRED)
 autoware_package()
 
 ament_auto_add_library(${PROJECT_NAME} SHARED
+  src/lib/graph.cpp
   src/lib/subscription.cpp
 )
 
