--- a/system/diagnostic_graph_aggregator/CMakeLists.txt
+++ b/system/diagnostic_graph_aggregator/CMakeLists.txt
@@ -13,14 +13,13 @@ ament_auto_add_library(${PROJECT_NAME} SHARED
   src/common/graph/units.cpp
 )
 
-ament_auto_add_executable(tree
-  src/tool/tree.cpp
-)
+ament_auto_add_executable(tree src/tool/tree.cpp)
 target_include_directories(tree PRIVATE src/common)
 
-ament_auto_add_executable(plantuml
-  src/tool/plantuml.cpp
-)
+ament_auto_add_executable(spreadsheet src/tool/plantuml.cpp)
+target_include_directories(spreadsheet PRIVATE src/common)
+
+ament_auto_add_executable(plantuml src/tool/plantuml.cpp)
 target_include_directories(plantuml PRIVATE src/common)
 
 ament_auto_add_library(aggregator SHARED
