--- a/common/autoware_diagnostic_utils/package.xml
+++ b/common/autoware_diagnostic_utils/package.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>autoware_control_cmd_gate</name>
+  <name>autoware_diagnostic_utils</name>
   <version>0.0.0</version>
-  <description>The control_cmd_gate package</description>
+  <description>The autoware_diagnostic_utils package</description>
   <maintainer email="isamu.takagi@tier4.jp">Takagi, Isamu</maintainer>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
   <buildtool_depend>autoware_cmake</buildtool_depend>
 
-  <depend>autoware_control_msgs</depend>
-  <depend>autoware_diagnostic_utils</depend>
-  <depend>autoware_vehicle_msgs</depend>
   <depend>diagnostic_updater</depend>
   <depend>rclcpp</depend>
-  <depend>rclcpp_components</depend>
 
+  <build_export_depend>tier4_system_msgs</build_export_depend>
+
+  <test_depend>ament_cmake_ros</test_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>autoware_lint_common</test_depend>
 
